--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 instagrapi
-google-auth
 google-api-python-client
-schedule
+google-auth
+google-auth-oauthlib
+google-auth-httplib2
+moviepy>=1.0.3
 Pillow>=8.1.1
