--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,1 @@
-instagrapi
-google-api-python-client
-google-auth
-google-auth-oauthlib
-google-auth-httplib2
-moviepy>=1.0.3
-Pillow>=8.1.1
-schedule
+psutil
